K8S/elasticsearch/kibana/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  labels:
    env: production
    tier: logging
    app: kibana
    name: kibana-ingress
spec:
  rules:
    - host: kibana.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
